Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.2
-
None
-
-
92e650832 (dev), e86c5bf71 (6.8)
Description
QFileDialog::selectNameFilter() does not work with the filter returned by QFileDialog::selectedtNameFilter() of a previous dialog. It is necessary to append at least a pair of empty parentheses. The problem is reproducible with the attached example 'app.zip'.
Attachments
For Gerrit Dashboard: QTBUG-127924 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
584369,4 | QFileDialog: return correct name filter with HideNameFilterDetails set | dev | qt/qtbase | Status: MERGED | +2 | +1 |
586377,2 | QFileDialog: return correct name filter with HideNameFilterDetails set | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |